Replace lambda with method reference